--- a/angular.json
+++ b/angular.json
@@ -27,14 +27,11 @@
               }
             ],
             "styles": [
-              "node_modules/wowjs/css/libs/animate.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.js",
-              "node_modules/wowjs/dist/wow.js"
-              
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.js"
             ]
           },
           "configurations": {
