--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "@fortawesome/angular-fontawesome": "^0.15.0",
     "@types/angular": "^1.8.9",
     "bootstrap": "^5.3.3",
+    "ng-angular-popup": "^0.6.2",
+    "ngx-toastr": "^19.0.0",
     "ngx-typed-js": "^2.1.1",
-    "ngx-wow": "^2.0.1",
     "rxjs": "~7.8.0",
     "swiper": "^11.1.14",
     "tslib": "^2.3.0",
     "typed.js": "^2.1.0",
-    "wowjs": "^1.1.3",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
